--- a/12-03.md
+++ b/12-03.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 12.3 "Реляционные базы данных: SQL. Часть 1" - 
+# Домашнее задание к занятию 12.3 "Реляционные базы данных: SQL. Часть 1" - Сенибратов Вячеслав
 
 Домашнее задание нужно выполнить на Dataset из презентации.
 
