--- a/12-03.md
+++ b/12-03.md
@@ -15,12 +15,12 @@
 ### Задание 1.
 
 Получите уникальные названия районов из таблицы с адресами, которые начинаются на “K” и заканчиваются на “a”, и не содержат пробелов.
-```
+```sql
 SELECT DISTINCT district  
 FROM address a  
 WHERE POSITION('K' IN district) = 1 AND RIGHT(district,1) = 'a' AND district LIKE '% %' = FALSE;  
 ```
-```
+```sql
 SELECT DISTINCT district  
 FROM address a  
 WHERE LEFT (district,1) = 'K' AND RIGHT(district,1) = 'a' AND POSITION(' ' IN district)=FALSE;  
@@ -29,7 +29,7 @@ WHERE LEFT (district,1) = 'K' AND RIGHT(district,1) = 'a' AND POSITION(' ' IN di
 
 Получите из таблицы платежей за прокат фильмов информацию по платежам, которые выполнялись в промежуток с 15 июня 2005 года по 18 июня 2005 года **включительно**, 
 и стоимость которых превышает 10.00.
-```
+```sql
 SELECT *  
 FROM payment p   
 WHERE amount > 10 AND payment_date BETWEEN '2005-06-15' AND '2005-06-19';   
@@ -37,7 +37,7 @@ WHERE amount > 10 AND payment_date BETWEEN '2005-06-15' AND '2005-06-19';
 ### Задание 3.
 
 Получите последние 5 аренд фильмов.
-```
+```sql
 SELECT *  
 FROM rental r  
 ORDER BY rental_date DESC  
@@ -50,7 +50,7 @@ LIMIT 5;
 Сформируйте вывод в результат таким образом:
 - все буквы в фамилии и имени из верхнего регистра переведите в нижний регистр,
 - замените буквы 'll' в именах на 'pp'
-```
+```sql
 SELECT customer_id, store_id,REPLACE(LOWER(first_name),'ll','pp'), LOWER(last_name), email, address_id, active=1   
 FROM customer c  
 WHERE first_name ='kelly' OR first_name ='willie';   
