--- a/12-03.md
+++ b/12-03.md
@@ -61,6 +61,10 @@ WHERE first_name ='kelly' OR first_name ='willie';
 ### Задание 5*.
 
 Выведите Email каждого покупателя, разделив значение Email на 2 отдельных колонки: в первой колонке должно быть значение, указанное до @, во второй значение, указанное после @.
+```sql
+SELECT LEFT(email, POSITION('@' IN email)-1), SUBSTR(email, POSITION('@' IN email)+1)  
+FROM customer c ;
+```
 
 ### Задание 6.*
 
