--- a/12-03.md
+++ b/12-03.md
@@ -69,3 +69,9 @@ FROM customer c ;
 ### Задание 6.*
 
 Доработайте запрос из предыдущего задания, скорректируйте значения в новых колонках: первая буква должна быть заглавной, остальные строчными.
+```sql
+SELECT CONCAT(LEFT(email, 1),LOWER(SUBSTR(LEFT(email, POSITION('.' IN email)-1), 2)),' ',
+	LEFT(SUBSTR(LEFT(email, POSITION('@' IN email)-1), POSITION('.' IN email)+1),1),
+	LOWER(SUBSTR(LEFT(email, POSITION('@' IN email)-1), POSITION('.' IN email)+2))) AS Name, SUBSTR(email, POSITION('@' IN email)+1)
+FROM customer c ;
+```
