--- a/12-03.md
+++ b/12-03.md
@@ -72,6 +72,7 @@ FROM customer c ;
 ```sql
 SELECT CONCAT(LEFT(email, 1),LOWER(SUBSTR(LEFT(email, POSITION('.' IN email)-1), 2)),' ',
 	LEFT(SUBSTR(LEFT(email, POSITION('@' IN email)-1), POSITION('.' IN email)+1),1),
-	LOWER(SUBSTR(LEFT(email, POSITION('@' IN email)-1), POSITION('.' IN email)+2))) AS Name, SUBSTR(email, POSITION('@' IN email)+1)
+	LOWER(SUBSTR(LEFT(email, POSITION('@' IN email)-1), POSITION('.' IN email)+2))) AS Name,
+	SUBSTR(email, POSITION('@' IN email)+1)
 FROM customer c ;
 ```
