--- a/12-04.md
+++ b/12-04.md
@@ -17,15 +17,36 @@
 - фамилия и имя сотрудника из этого магазина,
 - город нахождения магазина,
 - количество пользователей, закрепленных в этом магазине.
-
+```sql
+SELECT CONCAT(s2.first_name, " " ,s2.last_name) AS 'Name staff', c2.city AS City, COUNT(customer_id) AS 'Total customer'
+FROM customer c
+JOIN store s ON s.store_id =c.store_id
+JOIN staff s2 ON s2.store_id = s.store_id 
+JOIN address a ON a.address_id = s2.address_id
+JOIN city c2 ON c2.city_id  = a.city_id
+group by s.store_id, c2.city,s2.first_name, s2.last_name
+HAVING COUNT(customer_id) > 300;
+```
 ### Задание 2.
 
 Получите количество фильмов, продолжительность которых больше средней продолжительности всех фильмов.
+```sql
+SELECT COUNT(film_id) 
+FROM film
+WHERE `length` > (SELECT AVG(`length`)  FROM film);
+```
 
 ### Задание 3.
 
 Получите информацию, за какой месяц была получена наибольшая сумма платежей и добавьте информацию по количеству аренд за этот месяц.
 
+```sql
+SELECT MONTH(payment_date),SUM(amount),COUNT(rental_id)  
+FROM payment p 
+GROUP BY  MONTH(payment_date)
+ORDER BY SUM(amount) DESC
+LIMIT 1;
+```
 
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
@@ -35,6 +56,26 @@
 Посчитайте количество продаж, выполненных каждым продавцом. Добавьте вычисляемую колонку «Премия». Если количество продаж превышает 8000, то значение в колонке будет «Да», 
 иначе должно быть значение «Нет».
 
+```sql
+SELECT CONCAT(s.first_name, ' ', s.last_name), SUM(amount),
+	CASE
+		WHEN SUM(amount) > 8000 THEN 'Да'
+		ELSE 'Нет'
+	END AS Премия
+FROM payment p
+JOIN staff s ON s.staff_id = p.staff_id 
+GROUP BY p.staff_id 
+ORDER BY SUM(amount) DESC;
+```
+
 ### Задание 5*.
 
 Найдите фильмы, которые ни разу не брали в аренду.
+
+```sql
+SELECT f.title
+FROM film f
+LEFT JOIN inventory i ON i.film_id = f.film_id
+LEFT JOIN rental r ON r.inventory_id = i.inventory_id
+WHERE r.rental_id IS NULL; 
+```
