--- a/12-05.md
+++ b/12-05.md
@@ -14,6 +14,11 @@
 
 Напишите запрос к учебной базе данных, который вернет процентное отношение общего размера всех индексов к общему размеру всех таблиц.
 
+```sql
+SELECT (SUM(INDEX_LENGTH)/SUM(DATA_LENGTH))*100 AS 'INDEX/DATA'
+FROM information_schema.TABLES t;
+```
+
 ### Задание 2.
 
 Выполните explain analyze следующего запроса:
