--- a/12-05.md
+++ b/12-05.md
@@ -28,7 +28,19 @@ from payment p, rental r, customer c, inventory i, film f
 where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and r.customer_id = c.customer_id and i.inventory_id = r.inventory_id
 ```
 - перечислите узкие места,
+
+-> Table scan on <temporary>  (cost=2.50..2.50 rows=0) (actual time=17353.874..17353.901 rows=200 loops=1)
+-> Temporary table with deduplication  (cost=0.00..0.00 rows=0) (actual time=17353.872..17353.872 rows=391 loops=1)
+-> Window aggregate with buffering: sum(payment.amount) OVER (PARTITION BY c.customer_id,f.title )   (actual time=6721.224..16842.623 rows=642000 loops=1)
+-> Sort: c.customer_id, f.title  (actual time=6721.189..6944.014 rows=642000 loops=1)
+-> Nested loop inner join  (cost=9120545.44 rows=16705533) (actual time=0.443..3796.075 rows=642000 loops=1)
+                            
 - оптимизируйте запрос (внесите корректировки по использованию операторов, при необходимости добавьте индексы).
+```sql
+select distinct concat(c.last_name, ' ', c.first_name), sum(p.amount) over (partition by c.customer_id)
+from payment p, rental r, customer c
+where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and r.customer_id = c.customer_id
+```
 
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
