--- a/11-01.md
+++ b/11-01.md
@@ -79,7 +79,11 @@
 здесь справится лучше всего и почему?
 
 *Приведите ответ в свободной форме.*
-
+```
+СУБД лучше использовать ключ-значение. в данном варианте noSQL, что обеспечит производительность.
+Для параллельных вычислений над очень большими  наборами данных в компьютерных кластерах, и фреймворк для вычисления распределенных задач на узлах (node) кластера необходимо применить технологию MAP Reduce.
+Она изначально ориентирована на параллельные вычисления в распределенных кластера
+```
 ---
 
 Задания,помеченные звездочкой * - дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
