--- a/11-01.md
+++ b/11-01.md
@@ -67,7 +67,13 @@
 3.1* Какие, на Ваш взгляд, преимущества у NewSQL систем перед SQL и NoSQL.
 
 *Приведите ответ в свободной форме.*
-
+```
+- используют структурированный язык запросов (Structured Query Language, SQL) для определения и обработки данных
+- атомарность — ни одна транзакция не будет зафиксирована в системе частично.
+- непротиворечивость — фиксируются только допустимые результаты транзакций.
+- изолированность — на результат транзакции не влияют транзакции, проходящие параллельно ей.
+- долговечность — изменения в базе данных сохраняются несмотря на сбои или действия пользователей.
+```
 ---
 
 ### Задание 4. Кластеры
