--- a/11-01.md
+++ b/11-01.md
@@ -57,7 +57,16 @@
 2.1* Какие действия должны произойти, если пополнение счета телефона происходило бы через автоплатеж?
 
 *Приведите ответ в свободной форме.*
-
+```
+- Проверяем баланс пользователя на наличие денежных средст для операции в достаточном поличестве
+- Проверяем правильность реквизитов пополненния, их актуальность
+- проверяем состояние счета пополнения
+- списываем данные со счета
+- проверяем факт списания
+- записываем данные на счет пополниения
+- проверяем факт пополниния счета
+- записываем транзакцию
+```
 ---
 
 ### Задание 3. SQL vs NoSQL
