--- a/11-01.md
+++ b/11-01.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 11.1 "Базы данных, их типы"
+# Домашнее задание к занятию 11.1 "Базы данных, их типы - Сенибратов Вячеслав"
 
 Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
 
