--- a/12-02.md
+++ b/12-02.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 12.2 "Работа с данными (DDL/DML)"
+# Домашнее задание к занятию 12.2 "Работа с данными (DDL/DML) - Сенибратов Вячеслав"
 
 Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
 
