--- a/12-06.md
+++ b/12-06.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 12.6 "Репликация и масштабирование. Часть 1"
+# Домашнее задание к занятию 12.6 "Репликация и масштабирование. Часть - Сенибратов Вячеслав"
 Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
 
 Название файла должно содержать номер лекции и фамилию студента. Пример названия: "12.6 "Репликация и масштабирование. Часть 1 - Александр Александров"
