--- a/12-06.md
+++ b/12-06.md
@@ -14,7 +14,11 @@
 На лекции рассматривались режимы репликации master-slave, master-master, опишите их различия.
 
 *Ответить в свободной форме.*
-
+```
+master-slave используется для обеспечения отказоустойчивости приложений. Кроме этого, она позволяет распределить нагрузку на базу 
+master-master позволяет копировать данные с одного сервера на другой. Эта конфигурация добавляет избыточность и повышает эффективность при обращении к данным.
+master-master репликации – это настройка обычной Master-Slave репликации, только в обе стороны (каждый сервер является мастером и слейвом одновременно).
+```
 ---
 
 ### Задание 2.
