--- a/12-06.md
+++ b/12-06.md
@@ -26,7 +26,10 @@ master-master репликации – это настройка обычной 
 Выполните конфигурацию Master-Slave репликации (примером можно пользоваться из лекции).
 
 *Приложите скриншоты конфигурации, выполнения работы (состояния и режимы работы серверов).*
+```
+![image](https://user-images.githubusercontent.com/93542374/203036972-20668b51-49b2-4354-95c3-711856d41861.png)
 
+```
 ---
 ### noda1
 
