--- a/12-08.md
+++ b/12-08.md
@@ -40,7 +40,13 @@
 ### Задание 3. MySql
 
 3.1 С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySql. 
-
+```sql
+mysqlbackup --defaults-file=/home/dbadmin/my.cnf \
+  --incremental --incremental-base=history:last_backup \
+  --backup-dir=/home/dbadmin/temp_dir \
+  --backup-image=incremental_image1.bi \
+   backup-to-image
+```
 3.1* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
 
 *Приведите ответ в свободной форме.*
