--- a/12-08.md
+++ b/12-08.md
@@ -30,7 +30,10 @@
 ### Задание 2. PostgreSQL
 
 2.1 С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
-
+```sql
+$ pg_dump mydb > db.sql
+$ pg_restore -d newdb db.dump
+```
 2.1* Возможно ли автоматизировать этот процесс? Если да, то как?
 
 *Приведите ответ в свободной форме.*
