--- a/12-08.md
+++ b/12-08.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 12.8 "Резервное копирование баз данных"
+# Домашнее задание к занятию 12.8 "Резервное копирование баз данных - Сенибратов Вячеслав"
 
 Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
 
@@ -18,8 +18,20 @@
 Необходимо описать, какие варианты резервного копирования подходят в случаях: 
 
 1.1 Необходимо восстанавливать данные в полном объеме за предыдущий день.
-
+```
+Как один из вариантов, full backup в ночь. Принудительно делать блокровку данных на 02:00, отключать всех от резервируемых данных. 
+В случае неообходимости возможно оперативное востановление на предыдущие сутки на 02:00.
+```
+```
+// И не хранить резервные копии на томже носители что и резервируемые данные!!! //
+```
 1.2 Необходимо восстанавливать данные за час до предполагаемой поломки.
+```
+В данном случае возможно обойтись например теневымикопиями. Делать снапшоп каждый час. Время занимает значительно 
+меньше относительно full backup и места для хранения необходимо меньше. 
+```
+
+//И не хранить резервные копии на томже носители что и резервируемые данные!!!// 
 
 1.3* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую/починеную БД?
 
