--- a/12-08.md
+++ b/12-08.md
@@ -22,16 +22,21 @@
 Как один из вариантов, full backup в ночь. Принудительно делать блокровку данных на 02:00, отключать всех от резервируемых данных. 
 В случае неообходимости возможно оперативное востановление на предыдущие сутки на 02:00.
 ```
-```
-// И не хранить резервные копии на томже носители что и резервируемые данные!!! //
-```
+---
+И не хранить резервные копии на томже носители что и резервируемые данные!!! 
+backup-ы наше все!!!
+---
+
+
 1.2 Необходимо восстанавливать данные за час до предполагаемой поломки.
 ```
 В данном случае возможно обойтись например теневымикопиями. Делать снапшоп каждый час. Время занимает значительно 
 меньше относительно full backup и места для хранения необходимо меньше. 
 ```
+---
+И не хранить резервные копии на томже носители что и резервируемые данные!!!
+---
 
-//И не хранить резервные копии на томже носители что и резервируемые данные!!!// 
 
 1.3* Возможен ли кейс, когда при поломке базы происходило моментальное переключение на работающую/починеную БД?
 
