--- a/12-09.md
+++ b/12-09.md
@@ -39,6 +39,8 @@
 ```
 select case when pg_is_in_recovery() then 'REPLICA' else 'MASTER' end;
 ```
+![image](https://user-images.githubusercontent.com/93542374/203794850-6f67237c-59c1-4385-a8c1-14e34a455737.png)
+
 * Посмотрите количество подключенных реплик:
 ```
 select count(*) from pg_stat_replication;
