--- a/12-09.md
+++ b/12-09.md
@@ -46,6 +46,9 @@ select case when pg_is_in_recovery() then 'REPLICA' else 'MASTER' end;
 select count(*) from pg_stat_replication;
 ```
 
+![image](https://user-images.githubusercontent.com/93542374/203795059-b6b78199-78af-461d-b403-a927b75e378b.png)
+
+
 ### Проверьте работоспособность репликации в кластере
 
 * Создайте таблицу и вставьте одну-две строки.
