--- a/12-09.md
+++ b/12-09.md
@@ -67,6 +67,8 @@ insert into test_table values('Строка 1');
 ```
 select case when pg_is_in_recovery() then 'REPLICA' else 'MASTER' end;
 ```
+![image](https://user-images.githubusercontent.com/93542374/203812712-5eddc3cb-d62d-4a68-85ff-8145441e1609.png)
+
 * Проверьте состояние репликации
 ```
 select status from pg_stat_wal_receiver;
@@ -76,6 +78,7 @@ select status from pg_stat_wal_receiver;
 ```
 select * from test_table;
 ```
+![image](https://user-images.githubusercontent.com/93542374/203813036-a6c6f36c-f979-4d81-a87f-d281b4122ec7.png)
 
 По итогу пришлите скриншоты:
 
