--- a/13-01.md
+++ b/13-01.md
@@ -58,6 +58,12 @@ PORT|STATE|SERVICE|VERSION
 8180/tcp|open|http|Apache Tomcat/Coyote JSP engine 1.1
 
 ---
+PORT|STATE|SERVICE|VERSION|LINK|
+:-----|:-----|:-----|:-----|:-----|
+21/tcp|open|ftp|vsftpd 2.3.4|https://www.exploit-db.com/exploits/17491
+23/tcp|open|telnet|Linux telnetd|https://www.exploit-db.com/exploits/16327
+25/tcp|open|smtp|Postfix smtpd|https://www.exploit-db.com/exploits/48038
+111/tcp|open|rpcbind|2 (RPC #100000)|https://www.exploit-db.com/exploits/41974
 
 ---
 
