--- a/13-01.md
+++ b/13-01.md
@@ -29,7 +29,8 @@
 - Какие сетевые службы в ней разрешены?
 - Какие уязвимости были вами обнаружены? (список со ссылками: достаточно 3х уязвимостей)
   
-*Приведите ответ в свободной форме.* 
+*Приведите ответ в свободной форме.*
+
 ---
 PORT|STATE|SERVICE|VERSION
 :-----|:-----|:-----|:-----|
@@ -79,3 +80,11 @@ PORT|STATE|SERVICE|VERSION|LINK|
 - Как отвечает сервер?
 
 *Приведите ответ в свободной форме.*
+
+---
+Тип сканирования|Отличия|Ответ сервера
+:-----|:-----|:-----|
+SYN|	TCP соединение никогда не устанавливается до конца. Он работает с любым TCP стеком, не завися от каки-либо особенностей специфичной платформы, как это происходит при сканированиях типа FIN /Xmas. Он также предоставляет ясную и достоверную дифференциацию между состояниями открыт, закрыт и фильтруется.	|Ответы SYN/ACK указывают на то, что порт прослушивается (открыт), а RST (сброс) на то, что не прослушивается. Если после нескольких запросов не приходит никакого ответа, то порт помечается как фильтруемый. Порт также помечается как фильтруемый, если в ответ приходит ICMP сообщение об ошибке недостижимости (тип 3, код 1,2, 3, 9, 10 или 13).
+FIN	|FIN сканирование (-sF) Устанавливается только TCP FIN бит. Неспособность разделять порты на открытые и фильтруемые, т.к. порт помечается как открыт\|фильтруется.|	Если в ответ приходит RST пакет, то порт считается закрытым, отсутствие ответа означает, что порт открыт\|фильтруется. Порт помечается как фильтруется, если в ответ приходит ICMP ошибка о недостижимости (тип 3, код 1, 2, 3, 9, 10 или 13).
+Xmas|	Xmas сканирование (-sX) Устанавливаются FIN, PSH и URG флаги. Неспособность разделять порты на открытые и фильтруемые, т.к. порт помечается как открыт\|фильтруется.|Если в ответ приходит RST пакет, то порт считается закрытым, отсутствие ответа означает, что порт открыт\|фильтруется. Порт помечается как фильтруется, если в ответ приходит ICMP ошибка о недостижимости (тип 3, код 1, 2, 3, 9, 10 или 13).
+UDP|	UDP сканирование работает путем посылки пустого (без данных) UDP заголовка на каждый целевой порт. Иногда, служба будет отвечать UDP пакетом, указывая на то, что порт открыт. Если после нескольких попыток не было получено никакого ответа, то порт классифицируется как открыт\|фильтруется. Большой проблемой при UDP сканировании является его медленная скорость работы. Открытые и фильтруемые порты редко посылают какие-либо ответы, заставляя Nmap отправлять повторные запросы, на случай если пакеты были утеряны. Закрытые порты часто оказываются еще большей проблемой. Обычно они в ответ возвращают ICMP ошибку о недостижимости порта. Но в отличии от RST пакетов отсылаемых закрытыми TCP портами в ответ на SYN или сканирование с установкой соединения, многие хосты ограничивают лимит ICMP сообщений о недостижимости порта по умолчанию. Linux и Solaris особенно строги в этом плане.|Если в ответ приходит ICMP ошибка о недостижимости порта (тип 3, код 3), значит порт закрыт. Другие ICMP ошибки недостижимости (тип 3, коды 1, 2, 9, 10 или 13) указывают на то, что порт фильтруется.
