--- a/13-01.md
+++ b/13-01.md
@@ -88,3 +88,34 @@ SYN|	TCP соединение никогда не устанавливается
 FIN	|FIN сканирование (-sF) Устанавливается только TCP FIN бит. Неспособность разделять порты на открытые и фильтруемые, т.к. порт помечается как открыт\|фильтруется.|	Если в ответ приходит RST пакет, то порт считается закрытым, отсутствие ответа означает, что порт открыт\|фильтруется. Порт помечается как фильтруется, если в ответ приходит ICMP ошибка о недостижимости (тип 3, код 1, 2, 3, 9, 10 или 13).
 Xmas|	Xmas сканирование (-sX) Устанавливаются FIN, PSH и URG флаги. Неспособность разделять порты на открытые и фильтруемые, т.к. порт помечается как открыт\|фильтруется.|Если в ответ приходит RST пакет, то порт считается закрытым, отсутствие ответа означает, что порт открыт\|фильтруется. Порт помечается как фильтруется, если в ответ приходит ICMP ошибка о недостижимости (тип 3, код 1, 2, 3, 9, 10 или 13).
 UDP|	UDP сканирование работает путем посылки пустого (без данных) UDP заголовка на каждый целевой порт. Иногда, служба будет отвечать UDP пакетом, указывая на то, что порт открыт. Если после нескольких попыток не было получено никакого ответа, то порт классифицируется как открыт\|фильтруется. Большой проблемой при UDP сканировании является его медленная скорость работы. Открытые и фильтруемые порты редко посылают какие-либо ответы, заставляя Nmap отправлять повторные запросы, на случай если пакеты были утеряны. Закрытые порты часто оказываются еще большей проблемой. Обычно они в ответ возвращают ICMP ошибку о недостижимости порта. Но в отличии от RST пакетов отсылаемых закрытыми TCP портами в ответ на SYN или сканирование с установкой соединения, многие хосты ограничивают лимит ICMP сообщений о недостижимости порта по умолчанию. Linux и Solaris особенно строги в этом плане.|Если в ответ приходит ICMP ошибка о недостижимости порта (тип 3, код 3), значит порт закрыт. Другие ICMP ошибки недостижимости (тип 3, коды 1, 2, 9, 10 или 13) указывают на то, что порт фильтруется.
+
+---
+
+Результаты сканирования nmap
+
+.|SYN||||FIN/Xmas||||UDP|.
+:---:|:---:|:---:|---|:---:|:---:|:---:|---|:---:|:---:|:---:|
+PORT|STATE|SERVICE||PORT|STATE|SERVICE||PORT|STATE|SERVICE
+21/tcp|open|ftp||21/tcp|open\|filtered|ftp||53/udp|open|domain|
+22/tcp|open|ssh||22/tcp|open\|filtered|ssh||68/udp|open\|filtered|dhcpc|
+23/tcp|open|telnet||23/tcp|open\|filtered|telnet||69/udp|open\|filtered|tftp|
+25/tcp|open|smtp||25/tcp|open\|filtered|smtp||111/udp|open|rpcbind|
+53/tcp|open|domain||53/tcp|open\|filtered|domain||137/udp|open|netbios-ns|
+80/tcp|open|http||80/tcp|open\|filtered|http||138/udp|open\|filtered|netbios-dgm|
+111/tcp|open|rpcbind||111/tcp|open\|filtered|rpcbind||2049/udp|open|nfs|
+139/tcp|open|netbios-ssn||139/tcp|open\|filtered|netbios-ssn
+445/tcp|open|microsoft-ds||445/tcp|open\|filtered|microsoft-ds
+512/tcp|open|exec||512/tcp|open\|filtered|exec
+513/tcp|open|login||513/tcp|open\|filtered|login
+514/tcp|open|shell||514/tcp|open\|filtered|shell
+1099/tcp|open|rmiregistry||1099/tcp|open\|filtered|rmiregistry
+1524/tcp|open|ingreslock||1524/tcp|open\|filtered|ingreslock
+2049/tcp|open|nfs||2049/tcp|open\|filtered|nfs
+2121/tcp|open|ccproxy-ftp||2121/tcp|open\|filtered|ccproxy-ftp
+3306/tcp|open|mysql||3306/tcp|open\|filtered|mysql
+5432/tcp|open|postgresql||5432/tcp|open\|filtered|postgresql
+5900/tcp|open|vnc||5900/tcp|open\|filtered|vnc
+6000/tcp|open|X11||6000/tcp|open\|filtered|X11
+6667/tcp|open|irc||6667/tcp|open\|filtered|irc
+8009/tcp|open|ajp13||8009/tcp|open\|filtered|ajp13
+8180/tcp|open|unknown||8180/tcp|open\|filtered|unknown
