--- a/13-02.md
+++ b/13-02.md
@@ -17,7 +17,11 @@
 3. Зашифруйте домашний каталог пользователя с помощью eCryptfs.
 
 
-*В качестве ответа  пришлите снимки экрана домашнего каталога пользователя с исходными и зашифрованными данными.*  
+*В качестве ответа  пришлите снимки экрана домашнего каталога пользователя с исходными и зашифрованными данными.* 
+![image](https://user-images.githubusercontent.com/93542374/206700471-fe81f3b2-1449-4860-aa33-4d6d6d52cce9.png)
+
+![image](https://user-images.githubusercontent.com/93542374/206700149-0732b376-50c1-475c-9660-1b240f11d541.png)
+
 
 ### Задание 2.
 
