--- a/13-02.md
+++ b/13-02.md
@@ -30,6 +30,12 @@
 3. Зашифруйте созданный раздел с помощью LUKS.
 
 *В качестве ответа пришлите снимки экрана с поэтапным выполнением задания.*
+![image](https://user-images.githubusercontent.com/93542374/206701310-276882b0-2a09-48f5-9839-7cafbfb40192.png)
+
+![image](https://user-images.githubusercontent.com/93542374/206701995-39d05687-a08a-4547-979d-cf971f54a96a.png)
+
+![image](https://user-images.githubusercontent.com/93542374/206702528-edf60042-88ba-43ef-af39-d19b0d18ea78.png)
+
 
 
 ## Дополнительные задания (со звездочкой*)
