--- a/13-02.md
+++ b/13-02.md
@@ -36,6 +36,9 @@
 
 ![image](https://user-images.githubusercontent.com/93542374/206702528-edf60042-88ba-43ef-af39-d19b0d18ea78.png)
 
+![image](https://user-images.githubusercontent.com/93542374/206703536-3b1d8641-23ad-4aac-acbb-cb80d48b78f7.png)
+
+![image](https://user-images.githubusercontent.com/93542374/206704284-0e156d59-bebd-432a-876e-f2a5fe577c96.png)
 
 
 ## Дополнительные задания (со звездочкой*)
